--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rep2recall/r2r-format",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "description": "R2r (offline/online) abstract class for Rep2Recall",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -23,11 +23,13 @@
   "dependencies": {
     "@types/fast-json-stable-stringify": "^2.0.0",
     "@types/spark-md5": "^3.0.1",
-    "ankisync": "^0.1.3",
     "fast-json-stable-stringify": "^2.0.0",
     "spark-md5": "^3.0.0"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "ankisync": "^0.1.3"
   }
 }
